# trading-ml

./: .gitignore  .ocamlformat  README.md  dune-project  trading.opam
account/lib/: dune  factory.ml  factory.mli
account/lib/application/commands/: commit_fill_command.mli  commit_fill_command_handler.ml  commit_fill_command_handler.mli  commit_fill_command_workflow.ml  commit_fill_command_workflow.mli  dune  release_command.ml  release_command.mli  release_command_handler.ml  release_command_handler.mli  release_command_workflow.ml  release_command_workflow.mli  reserve_command.ml  reserve_command.mli  reserve_command_handler.ml  reserve_command_handler.mli  reserve_command_workflow.ml  reserve_command_workflow.mli
account/lib/application/domain_event_handlers/: dune  publish_integration_event_on_amount_reserved.ml  publish_integration_event_on_amount_reserved.mli  publish_integration_event_on_reservation_drawn_down.ml  publish_integration_event_on_reservation_drawn_down.mli  publish_integration_event_on_reservation_filled.ml  publish_integration_event_on_reservation_filled.mli  publish_integration_event_on_reservation_released.ml  publish_integration_event_on_reservation_released.mli
account/lib/application/integration_events/: amount_reserved_integration_event.ml  amount_reserved_integration_event.mli  dune  reservation_drawn_down_integration_event.ml  reservation_drawn_down_integration_event.mli  reservation_filled_integration_event.ml  reservation_filled_integration_event.mli  reservation_rejected_integration_event.ml  reservation_rejected_integration_event.mli  reservation_released_integration_event.ml  reservation_released_integration_event.mli
account/lib/application/queries/: dune  instrument_view_model.mli  portfolio_view_model.ml  portfolio_view_model.mli  position_view_model.ml  position_view_model.mli  reservation_view_model.ml  reservation_view_model.mli  view_model.ml
account/lib/application/view_models/: compile_checks.ml  dune  instrument_view_model.mli  portfolio_view_model.ml
account/lib/domain/: dune  portfolio.ml  portfolio.mli
account/lib/domain/portfolio/: portfolio.ml  portfolio.mli  portfolio.mlw
broker/lib/: dune  factory.ml  factory.mli
broker/lib/application/commands/: cancel_pending_order_command.ml  cancel_pending_order_command.mli  cancel_pending_order_command_handler.ml  cancel_pending_order_command_handler.mli  cancel_pending_order_command_workflow.ml  cancel_pending_order_command_workflow.mli  dune  submit_order_command.ml  submit_order_command.mli  submit_order_command_handler.ml  submit_order_command_handler.mli  submit_order_command_workflow.ml  submit_order_command_workflow.mli  unwatch_bars_command.ml  unwatch_bars_command.mli  unwatch_bars_command_handler.ml  unwatch_bars_command_handler.mli  unwatch_bars_command_workflow.ml  unwatch_bars_command_workflow.mli  watch_bars_command.ml  watch_bars_command.mli  watch_bars_command_handler.ml  watch_bars_command_handler.mli  (+2 more)
broker/test/grpc_smoke/: dune  finam_grpc_auth_probe.ml  finam_grpc_place_cancel_probe.ml  finam_grpc_readonly_probe.ml
broker/test/live_smoke/: alor_public_trades_probe.ml  bcs_public_trades_probe.ml  bcs_smoke.ml  dune  finam_public_trades_probe.ml  finam_smoke.ml  finam_ws_subscription_key_probe.ml
broker/test/unit/: broker_unit_runner.ml  dune
execution_management/lib/: dune  factory.ml  factory.mli
execution_management/lib/domain/: dune
execution_management/test/unit/: dune  execution_management_unit_runner.ml  kill_switch_test.ml  open_order_ticket_process_test.ml  order_process_manager_test.ml  place_order_pm_test.ml  rate_limit_test.ml
lib/domain/core/: board.mli  candle.gospel  candle.ml  candle.mli  candle_json.ml  candle_json.mli  decimal.gospel  decimal.ml  decimal.mli  decimal.mlw  decimal_json.ml  decimal_json.mli  dune  instrument.ml  instrument.mli  isin.ml  isin.mlw  order.ml  order.mli  side.ml  side.mli  side.mlw  signal.ml  signal.mli  symbol.ml  ticker.ml  ticker.mli  ticker.mlw  timeframe.ml  timeframe.mli  timeframe.mlw
lib/domain/engine/: backtest.ml  backtest.mli  backtest.mlw  dune  pipeline.ml  pipeline.mli  pipeline.mlw  portfolio.ml  portfolio.mli  portfolio.mlw  risk.ml  risk.mli  risk.mlw  step.ml  step.mli  step.mlw
lib/domain/indicators/: ad.ml  ad.mli  atr.ml  atr.mlw  bollinger.ml  bollinger.mli  chaikin_oscillator.ml  chaikin_oscillator.mlw  cmf.ml  cmf.mlw  cvd.ml  cvd.mlw  cvi.ml  dune  ema.ml  ema.mli  ema.mlw  indicator.ml  indicator.mli  macd.ml  macd.mlw  macd_weighted.ml  macd_weighted.mli  macd_weighted.mlw  mfi.ml  mfi.mli  obv.ml  obv.mli  obv.mlw  registry.ml  registry.mli  registry.mlw  ring.ml  ring.mli  ring_im.ml  ring_im.mli  ring_im.mlw  rsi.ml  rsi.mli  rsi.mlw  (+10 more)
lib/domain/strategies/: ad_ma_crossover.ml  ad_ma_crossover.mli  bollinger_breakout.ml  bollinger_breakout.mli  bollinger_breakout.mlw  bracket.mli  bracket.mlw  chaikin_momentum.ml  chaikin_momentum.mli  chaikin_momentum.mlw  composite.ml  composite.mli  composite.mlw  dune  gbt_strategy.ml  gbt_strategy.mli  gbt_strategy.mlw  macd_momentum.ml  macd_momentum.mli  macd_momentum.mlw  mfi_mean_reversion.ml  mfi_mean_reversion.mlw  obv_ma_crossover.ml  obv_ma_crossover.mli  registry.ml  registry.mli  rsi_mean_reversion.ml  rsi_mean_reversion.mlw  sma_crossover.ml  sma_crossover.mli  strategy.ml  strategy.mli  strategy.mlw
paper_broker/lib/: dune  factory.ml  factory.mli
portfolio_management/lib/: dune  factory.ml  factory.mli
portfolio_management/lib/domain/: dune  portfolio_construction.ml  portfolio_construction.mli  portfolio_construction.mlw
portfolio_management/test/unit/: dune  portfolio_management_unit_runner.ml
pre_trade_risk/lib/: dune  factory.ml  factory.mli
pre_trade_risk/lib/domain/: dune
shared/lib/decimal/: decimal.ml  decimal.mli  decimal.mlw  dune
shared/lib/pipe/: dune  stream.mli  stream.mlw
strategy/lib/: dune  factory.ml  factory.mli
strategy/test/unit/: dune  unit_runner.ml
test/live_smoke/: bcs_smoke.ml  dune  finam_smoke.ml  live_smoke_runner.ml
test/unit/: dune  unit_runner.ml
(+1709 files in other folders)
