(library
 (name account_factory)
 (public_name trading.account.factory)
 (modules factory)
 (libraries
  bus
  core
  common
  decimal
  account
  account_commands
  account_integration_events
  account_inbound_integration_events
  account_inbound_http
  inbound_http
  yojson
  ppx_yojson_conv_lib)
 (preprocess
  (pps ppx_yojson_conv))
 (flags (:standard -open Ppx_yojson_conv_lib.Yojson_conv.Primitives)))
