(library
 (name broker_factory)
 (public_name trading.broker.factory)
 (modules factory)
 (libraries
  bus
  core
  decimal
  broker
  broker_commands
  broker_domain
  broker_domain_event_handlers
  broker_integration_events
  broker_ohs_integration_events
  broker_inbound_http
  broker_store
  broker_persistence
  finam
  finam_grpc
  bcs
  alor
  synthetic
  http_transport
  inbound_http
  log
  eio
  eio.unix
  unix
  yojson
  ppx_yojson_conv_lib))
