(library
 (name execution_management_factory)
 (public_name trading.execution_management.factory)
 (modules factory)
 (libraries
  bus
  core
  decimal
  datetime
  workflow_engine
  execution_management
  execution_management_integration_events
  execution_management_external_integration_events
  execution_management_process_managers
  execution_management_inbound_http
  inbound_http
  yojson
  ppx_yojson_conv_lib)
 (preprocess
  (pps ppx_yojson_conv))
 (flags
  (:standard -open Ppx_yojson_conv_lib.Yojson_conv.Primitives)))
