(library
 (name execution_management_factory)
 (public_name trading.execution_management.factory)
 (modules factory)
 (libraries
  bus
  core
  decimal
  datetime
  workflow_engine
  execution_management
  execution_management_integration_events
  execution_management_external_integration_events
  execution_management_commands
  execution_management_ports
  execution_management_persistence
  execution_management_feeds
  execution_management_view_models
  execution_management_queries
  execution_management_inbound_http
  inbound_http
  yojson
  ppx_yojson_conv_lib)
 (preprocess
  (pps ppx_yojson_conv))
 (flags
  (:standard -open Ppx_yojson_conv_lib.Yojson_conv.Primitives)))
