(library
 (name strategy_factory)
 (public_name trading.strategy.factory)
 (modules factory)
 (libraries
  bus
  core
  common
  decimal
  strategies
  live_engine
  strategy_integration_events
  strategy_external_integration_events
  strategy_external_view_models
  strategy_inbound_http
  inbound_http
  yojson
  ppx_yojson_conv_lib
  eio)
 (preprocess
  (pps ppx_yojson_conv))
 (flags
  (:standard
   -open Ppx_yojson_conv_lib.Yojson_conv.Primitives
   -open Common)))
