; Live smoke tests — explicit opt-in via `dune build @live_smoke`.
; Not part of the default @runtest alias because they require
; real broker credentials and network reach; failures are not
; regressions. The test binaries themselves skip cleanly when
; credentials are absent from the environment.

(executable
 (name live_smoke_runner)
 (libraries core finam bcs http_transport
            eio eio_main mirage-crypto-rng.unix
            str alcotest))

(rule
 (alias live_smoke)
 (deps live_smoke_runner.exe)
 (action (run %{dep:./live_smoke_runner.exe})))
