(library
 (name account)
 (public_name trading.account)
 (libraries core))

; Per-aggregate domain layout (see docs/adr/0006): each aggregate is
; a subdir with values/, entities/, events/. Qualified mode wraps
; subdir names into the module path: portfolio/values/position.ml
; becomes Account.Portfolio.Values.Position.
(include_subdirs qualified)

(rule
 (alias gospel)
 (deps
  (glob_files_rec *.mli)
  (glob_files ../../../lib/domain/gospel_stubs/*.mli))
 (action
  (bash
   "set -eu
for f in %{deps}; do
  case \"$f\" in ../*) continue ;; esac
  grep -q '(\\*@' \"$f\" || continue
  gospel check -L ../../../lib/domain/gospel_stubs -L . \"$f\"
done")))

; Why3 deductive verification. -L includes lib/domain/core so .mlw
; files can `use decimal.Decimal`, `use side.Side` etc., and -L .
; lets aggregate-root .mlw files import their own subdir modules
; via qualified paths like `use portfolio.entities.reservation.Reservation`.
(rule
 (alias why3)
 (deps
  (glob_files_rec *.mlw)
  (glob_files ../../../lib/domain/core/*.mlw))
 (action
  (bash
   "set -eu
for f in %{deps}; do
  case \"$f\" in ../*) continue ;; esac
  why3 prove -L . -L ../../../lib/domain/core -P alt-ergo \"$f\" >/dev/null 2>&1 \\
    || why3 prove -L . -L ../../../lib/domain/core -P z3 \"$f\" >/dev/null
done")))

; gospel-alias is intentionally NOT a runtest dep: gospel 0.3.1
; doesn't support [module type of], which the per-aggregate ADR-0006
; layout uses for re-export. The why3-alias still proves invariants
; via the .mlw files. Run `dune build @gospel` manually to type-check
; gospel annotations on files that don't use [module type of].
(alias
 (name runtest)
 (deps (alias why3)))
