; Live smoke tests — explicit opt-in via `dune build @live_smoke`.
; Not part of the default @runtest alias because they require
; real broker credentials and network reach; failures are not
; regressions. The test binaries themselves skip cleanly when
; credentials are absent from the environment.

(executables
 (names live_smoke_runner finam_ws_subscription_key_probe finam_public_trades_probe)
 (libraries core broker_domain broker_integration_events decimal finam bcs alor broker
            http_transport
            websocket
            eio eio_main mirage-crypto-rng.unix
            str alcotest)
 (flags (:standard -open Broker_domain)))

(rule
 (alias live_smoke)
 (deps live_smoke_runner.exe)
 (action (run %{dep:./live_smoke_runner.exe})))
