(test
 (name broker_unit_runner)
 (libraries
  core broker_domain decimal
  broker
  broker_integration_events
  broker_view_models
  http_transport
  websocket
  finam
  bcs
  token_store
  acl_common
  eio
  eio_main
  str
  unix
  alcotest
  qcheck-core)
 (flags (:standard -open Broker_domain -w -33)))

; Same flatten-everything convention as test/unit/. Filenames
; carry [finam_] / [bcs_] prefix so flat namespace doesn't collide.
(include_subdirs unqualified)
