(test
 (name broker_unit_runner)
 (libraries
  core broker_domain decimal datetime
  broker
  broker_commands
  broker_integration_events
  broker_view_models
  broker_store
  http_transport
  websocket
  finam
  bcs
  broker_persistence
  acl_common
  rop
  eio
  eio_main
  str
  unix
  alcotest
  qcheck-core)
 (flags (:standard -open Broker_domain -w -33)))

; Same flatten-everything convention as test/unit/. Filenames
; carry [finam_] / [bcs_] prefix so flat namespace doesn't collide.
(include_subdirs unqualified)
