(test
 (name execution_management_unit_runner)
 (libraries
  core
  decimal
  execution_management
  execution_management_external_integration_events
  execution_management_integration_events
  execution_management_view_models
  execution_management_queries
  execution_management_ports
  execution_management_persistence
  execution_management_commands
  execution_management_external_view_models
  execution_management_feeds
  alcotest))

(include_subdirs unqualified)
