(library
 (name core)
 (public_name trading.core))

; Gospel type-checks only .mli files carrying (*@ ... *) annotations.
; The shared ../gospel_stubs/ directory provides a Format stub so .mli
; files exporting [pp : Format.formatter -> t -> unit] don't crash the
; type-checker (see docs/howto/formal-verification.md).
(rule
 (alias gospel)
 (deps
  (glob_files *.mli)
  (glob_files ../gospel_stubs/*.mli))
 (action
  (bash "set -eu
for f in %{deps}; do
  case \"$f\" in ../*) continue ;; esac
  grep -q '(\\*@' \"$f\" || continue
  gospel check -L ../gospel_stubs -L . \"$f\"
done")))

; Why3 deductive verification. .mlw files carry proofs of algebraic
; laws derived from the contracts in the matching .mli. Tries Alt-Ergo
; first (faster on simple goals); falls back to Z3 on goals Alt-Ergo
; can't close. -L . lets sibling .mlw files resolve via `use Module`.
(rule
 (alias why3)
 (deps (glob_files *.mlw))
 (action
  (bash "set -eu
for f in %{deps}; do
  why3 prove -L . -P alt-ergo \"$f\" >/dev/null 2>&1 \\
    || why3 prove -L . -P z3 \"$f\" >/dev/null
done")))

; Bind formal verification into `dune runtest` so CI runs both alongside
; the unit-test suite. Keep `dune build` lean — proofs run only when
; tests do.
(alias
 (name runtest)
 (deps (alias gospel) (alias why3)))
