(library
 (name engine)
 (public_name trading.engine)
 (libraries core indicators strategies stream))

(rule
 (alias gospel)
 (deps
  (glob_files *.mli)
  (glob_files ../gospel_stubs/*.mli)
  gospel_stubs/core.mli)
 (action
  (bash "set -eu
for f in %{deps}; do
  case \"$f\" in gospel_stubs/*|../*) continue ;; esac
  grep -q '(\\*@' \"$f\" || continue
  gospel check -L ../gospel_stubs -L gospel_stubs -L . \"$f\"
done")))

; Why3 deductive verification. -L includes core/ so engine .mlw files
; can `use decimal.Decimal`, `use side.Side` etc.
(rule
 (alias why3)
 (deps
  (glob_files *.mlw)
  (glob_files ../core/*.mlw))
 (action
  (bash "set -eu
for f in %{deps}; do
  case \"$f\" in ../*) continue ;; esac
  why3 prove -L . -L ../core -P alt-ergo \"$f\" >/dev/null
done")))
