(library
 (name indicators)
 (public_name trading.indicators)
 (libraries core))

(rule
 (alias why3)
 (deps (glob_files *.mlw) (glob_files ../core/*.mlw))
 (action
  (bash "set -eu
for f in %{deps}; do
  case \"$f\" in ../*) continue ;; esac
  why3 prove -L . -L ../core -P alt-ergo \"$f\" >/dev/null
done")))
