(library
 (name strategies)
 (public_name trading.strategies)
 (libraries core indicators gbt))

(rule
 (alias why3)
 (deps
  (glob_files *.mlw)
  (glob_files ../core/*.mlw)
  (glob_files ../indicators/*.mlw))
 (action
  (bash "set -eu
for f in %{deps}; do
  case \"$f\" in ../*) continue ;; esac
  why3 prove -L . -L ../core -L ../indicators -P alt-ergo \"$f\" >/dev/null
done")))
