(test
 (name portfolio_management_unit_runner)
 (libraries
  core
  decimal
  rop
  portfolio_management
  portfolio_management_commands
  portfolio_management_domain_event_handlers
  alcotest))

; Filenames globally unique within this test runner so the flat
; namespace doesn't collide.
(include_subdirs unqualified)
