; Lazy pull-based pipeline primitives.
;
; Library is wrapped — modules are accessed as `Pipe.Stream` and
; `Pipe.Eio_stream`, never opened. The qualified access is what
; insulates `Pipe.Stream` from camlp-streams.Stream (pulled by
; atdgen-runtime → biniou): the top-level `Stream` namespace
; stays free for camlp-streams.
(library
 (name pipe)
 (public_name trading.pipe)
 (libraries eio))

(rule
 (alias why3)
 (deps (glob_files *.mlw))
 (action
  (bash "set -eu
for f in %{deps}; do
  why3 prove -L . -P alt-ergo \"$f\" >/dev/null 2>&1 \\
    || why3 prove -L . -P z3 \"$f\" >/dev/null
done")))

(alias
 (name runtest)
 (deps (alias why3)))
