(test
 (name unit_runner)
 (libraries core strategy_core decimal indicators strategies logistic_regression gbt
            triple_barrier engine
            broker finam bcs token_store paper
            live_engine stream eio_stream
            eio eio_main str unix
            alcotest qcheck-core)
 (flags (:standard -open Strategy_core -w -33)))

; Unqualified flattens the subdirectory tree into a single module namespace.
; Filenames must therefore be globally unique — vendor-specific tests carry
; a [finam_] / [bcs_] prefix to disambiguate.
(include_subdirs unqualified)
