(test
 (name unit_runner)
 (libraries core common decimal datetime indicators strategies logistic_regression gbt
            triple_barrier view_models strategy_integration_events
            broker finam bcs token_store
            live_engine stream eio_stream
            eio eio_main str unix
            alcotest qcheck-core)
 (flags (:standard -open Common -w -33)))

; Unqualified flattens the subdirectory tree into a single module namespace.
; Filenames must therefore be globally unique — vendor-specific tests carry
; a [finam_] / [bcs_] prefix to disambiguate.
(include_subdirs unqualified)
