(library
 (name broker_commands)
 (public_name trading.broker.commands)
 (libraries
  yojson
  ppx_yojson_conv_lib
  core broker_domain decimal
  broker_view_models
  broker
  broker_integration_events)
 (preprocess
  (pps ppx_yojson_conv))
 (flags
  (:standard
   -open Ppx_yojson_conv_lib.Yojson_conv.Primitives
   -open Broker_domain)))
