(library
 (name broker_commands)
 (public_name trading.broker.commands)
 (libraries
  yojson
  ppx_yojson_conv_lib
  atdgen-runtime
  core broker_domain decimal datetime rop log
  broker_view_models
  broker
  broker_store
  broker_integration_events)
 (preprocess
  (pps ppx_yojson_conv))
 (flags
  (:standard
   -open Ppx_yojson_conv_lib.Yojson_conv.Primitives
   -open Broker_domain
   -open Broker_view_models)))

; Wire contract generation. The .atd source is the single
; source of truth for the wire shape; atdgen emits typed
; OCaml records (_t) and JSON codecs (_j) at build time.
; Hand-written `<name>.ml` modules wrap these via `include`
; and add the `of_domain` projection.
(rule
 (deps
  (:atd %{project_root}/shared/contracts/broker/commands/submit_order_command.atd))
 (targets submit_order_command_t.ml
          submit_order_command_t.mli
          submit_order_command_j.ml
          submit_order_command_j.mli)
 (action
  (progn
   (run atdgen -t -o submit_order_command %{atd})
   (run atdgen -j -o submit_order_command %{atd}))))

; cancel_pending_order_command — wire contract owned by broker BC
; and shared byte-identically with paper_broker (paper_broker is
; broker's backtest substitute; the saga's cancel command must
; round-trip identically through either BC).
(rule
 (deps
  (:atd %{project_root}/shared/contracts/broker/commands/cancel_pending_order_command.atd))
 (targets cancel_pending_order_command_t.ml
          cancel_pending_order_command_t.mli
          cancel_pending_order_command_j.ml
          cancel_pending_order_command_j.mli)
 (action
  (progn
   (run atdgen -t -o cancel_pending_order_command %{atd})
   (run atdgen -j -o cancel_pending_order_command %{atd}))))

(rule
 (deps
  (:atd %{project_root}/shared/contracts/broker/commands/watch_bars_command.atd))
 (targets watch_bars_command_t.ml
          watch_bars_command_t.mli
          watch_bars_command_j.ml
          watch_bars_command_j.mli)
 (action
  (progn
   (run atdgen -t -o watch_bars_command %{atd})
   (run atdgen -j -o watch_bars_command %{atd}))))

(rule
 (deps
  (:atd %{project_root}/shared/contracts/broker/commands/unwatch_bars_command.atd))
 (targets unwatch_bars_command_t.ml
          unwatch_bars_command_t.mli
          unwatch_bars_command_j.ml
          unwatch_bars_command_j.mli)
 (action
  (progn
   (run atdgen -t -o unwatch_bars_command %{atd})
   (run atdgen -j -o unwatch_bars_command %{atd}))))
