(library
 (name broker_integration_events)
 (public_name trading.broker.integration_events)
 (libraries yojson ppx_yojson_conv_lib core broker_domain decimal broker_view_models)
 (preprocess
  (pps ppx_yojson_conv))
 (flags
  (:standard
   -open Ppx_yojson_conv_lib.Yojson_conv.Primitives
   -open Broker_domain)))
